kubedev/Criando Services/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: NodePort
  selector:
    type: api
  ports:
    - name: http
      port: 80
      targetPort: 80
